# tinyToolkit-1

./: CMakeLists.txt  README.md
source/common/: define.h  function.h  platform.h  symbol.h  version.h
source/convert/: CMakeLists.txt  base64.cpp  base64.h  url.cpp  url.h
source/debug/: CMakeLists.txt  dump.cpp  dump.h  stacktrace.cpp  stacktrace.h
source/hash/: CMakeLists.txt  hmac_md5.cpp  hmac_md5.h  hmac_sha1.cpp  hmac_sha1.h  hmac_sha224.cpp  hmac_sha224.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha384.cpp  hmac_sha384.h  hmac_sha512.cpp  hmac_sha512.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha224.cpp  sha224.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
source/id/: CMakeLists.txt  snowflake.cpp  snowflake.h  unique.cpp  unique.h
source/options/: CMakeLists.txt  any.cpp  any.h  description.cpp  description.h  descriptionGroup.cpp  descriptionGroup.h  options.cpp  options.h  traits.cpp  traits.h  type.cpp  type.h  value.cpp  value.h
source/test/: CMakeLists.txt  case.cpp  case.h  compare.cpp  compare.h  console.cpp  console.h  environment.cpp  environment.h  failure.cpp  failure.h  message.cpp  message.h  result.cpp  result.h  test.cpp  test.h  unit.cpp  unit.h
source/util/: CMakeLists.txt  application.cpp  application.h  filesystem.cpp  filesystem.h  latch.cpp  latch.h  math.cpp  math.h  regex.cpp  regex.h  signal.cpp  signal.h  singleton.cpp  singleton.h  string.cpp  string.h  system.cpp  system.h  time.cpp  time.h
support/cmake/check/: CheckBuildType.cmake  CheckCompiler.cmake
support/script/install/: linux.sh  windows.bat
test/convert/: base64.cpp  base64.h  main.cpp  main.h  url.cpp  url.h
test/debug/: dump.cpp  dump.h  main.h  stacktrace.cpp  stacktrace.h
test/hash/: hmac_md5.cpp  hmac_md5.h  hmac_sha1.cpp  hmac_sha1.h  hmac_sha224.cpp  hmac_sha224.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha384.cpp  hmac_sha384.h  hmac_sha512.cpp  hmac_sha512.h  main.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha224.cpp  sha224.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
test/id/: main.h  snowflake.cpp  snowflake.h  unique.cpp  unique.h
test/options/: CMakeLists.txt  description.cpp  description.h  descriptionGroup.cpp  descriptionGroup.h  main.h  options.cpp  options.h
test/util/: CMakeLists.txt  application.cpp  application.h  filesystem.cpp  filesystem.h  latch.cpp  latch.h  main.h  math.cpp  math.h  regex.cpp  regex.h  signal.cpp  signal.h  singleton.cpp  singleton.h  string.cpp  string.h  system.cpp  system.h  time.cpp  time.h
